<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:orderInCategory="1"
        android:title="@string/action_undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:orderInCategory="2"
        android:title="@string/action_redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_erase"
        android:icon="@drawable/ic_eraser"
        android:orderInCategory="3"
        android:title="@string/action_erase"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_open"
        android:orderInCategory="4"
        android:title="@string/action_open"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="5"
        android:title="@string/action_save"
        app:showAsAction="always" />
</menu>